--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/33efce0f6f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="style.css">
   
 
 </head>
